fix(flat-components): remove horizontal scrollbar in chat users

--- a/packages/flat-components/src/components/ChatPanel/ChatUsers/style.less
+++ b/packages/flat-components/src/components/ChatPanel/ChatUsers/style.less
@@ -44,6 +44,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
     overflow-y: auto;
     padding: 0 12px;
 
